# quarotor_feedback_controller

./: CMakeLists.txt  package.xml
Scripts/: vel1.py  vel2.py
include/: OffboardWrapper.h  QuadrotorFeedbackController.h  QuadrotorMPCController.h
launch/: multi_uav_mavros_sitl.launch  quadrotor_controller.launch
model/: CMakeCache.txt  Makefile  cmake_install.cmake  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
model/quadrotor_mpc_codegen/: acado_integrator.c  acado_solver.c
src/: OffboardNode1.cpp  OffboardNode2.cpp  OffboardWrapper.cpp  QuadrotorAggressiveController.cpp  QuadrotorFeedbackController.cpp
src/MPC/: QuadrotorMPCController.cpp
